# CCM

./: .gitignore  CMakeLists.txt  Config.cmake.in
CCM/: CMakeLists.txt
CCM/include/: CCM.hpp  model.hpp  util.hpp  uuid.hpp  version.hpp
CCM/include/CCM/: CCM.hpp  math.hpp  model.hpp  util.hpp  version.hpp
CCM/include/CCM/plugin/: context.hpp  plugin.hpp
CCM/include/CCM/shapes/: bone.hpp  shape.hpp
CCM/include/file/: chunk.hpp
CCM/include/plugin/: context.hpp  plugin.hpp
CCM/include/shapes/: shape.hpp
CCM/src/: CCM.cpp  math.cpp  uuid.cpp  version.cpp
CCM/src/plugin/: context.cpp  plugin.cpp
CCM/src/shapes/: shape.cpp
Editor/: .gitignore  CMakeLists.txt
Editor/include/: Editor.hpp
Editor/include/glad/: gl.h  glad.h
Editor/src/: glad.c  main.cpp
PluginTemplate/: CMakeLists.txt
PluginTemplate/include/: CCMplugin.hpp  PluginBody.inc
PluginTemplate/src/: CCMplugin.cpp  main.cpp
